--- a/portfolio-backend/.gitignore
+++ b/portfolio-backend/.gitignore
@@ -1,16 +1,20 @@
-/vendor/
-/assets/
-/composer.lock
 
-/.env
-/var/
-/public/bundles/
-/var/cache/
-/var/log/
-/var/sessions/
-/var/test/
-/var/bootstrap.php.cache
+###> symfony/framework-bundle ###
 /.env.local
-/.env.test.local
-/.env.prod.local
-/.env.*.local.php
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+/.phpunit.cache/
+###< phpunit/phpunit ###
+
+###> symfony/asset-mapper ###
+/public/assets/
+/assets/vendor/
+###< symfony/asset-mapper ###
