Update backend .gitignore - untrack config and build files

--- a/portfolio-backend/.gitignore
+++ b/portfolio-backend/.gitignore
@@ -8,6 +8,15 @@
 /public/bundles/
 /var/
 /vendor/
+/assets/
+/bin/
+/.editorconfig
+/.env.dev
+/.env.test
+/compose.override.yaml
+/compose.yaml
+/importmap.php
+/phpunit.dist.xml
 ###< symfony/framework-bundle ###
 
 ###> phpunit/phpunit ###
