--- a/portfolio-backend/config/packages/framework.yaml
+++ b/portfolio-backend/config/packages/framework.yaml
@@ -10,6 +10,7 @@ framework:
         handler_id: null
         cookie_secure: auto
         cookie_samesite: lax
+        cookie_path: / 
         storage_factory_id: session.storage.factory.native
 
     #esi: true
