--- a/portfolio-backend/config/packages/nelmio_cors.yaml
+++ b/portfolio-backend/config/packages/nelmio_cors.yaml
@@ -1,16 +1,15 @@
 nelmio_cors:
     defaults:
         origin_regex: true 
-        allow_origin: ['http://localhost:3000']
         allow_credentials: true
         allow_headers: ['Content-Type', 'Authorization']
         allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']
-        expose_headers: ['Link']
-        max_age: 3600
     paths:
         '^/api/':
-            allow_origin: ['*'] 
-            allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']
-            allow_headers: ['*']
-            allow_credentials: false 
+            allow_origin: 
+                - 'http://localhost:3000'
+                - 'http://localhost:3001'
+            allow_credentials: true
+            allow_headers: ['Content-Type', 'Authorization']
+            allow_methods: ['GET','POST','PUT','PATCH','DELETE','OPTIONS']
 
