--- a/portfolio-backend/config/packages/security.yaml
+++ b/portfolio-backend/config/packages/security.yaml
@@ -1,7 +1,9 @@
 security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 
+            algorithm: bcrypt
+            cost: 12
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
@@ -16,6 +18,11 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            stateless: false
+            json_login:
+                check_path: /api/login_check
+                username_path: email
+                password_path: password
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -28,6 +35,13 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/login_check, roles: PUBLIC_ACCESS }
+        - { path: ^/api/projects, roles: PUBLIC_ACCESS }
+        - { path: ^/api/competences, roles: PUBLIC_ACCESS }
+        - { path: ^/api/messages, roles: PUBLIC_ACCESS, methods: [POST] }
+        - { path: ^/api/admin/view-cv, roles: PUBLIC_ACCESS }
+        - { path: ^/api/auth/me, roles: ROLE_ADMIN }
+        - { path: ^/api/, roles: ROLE_ADMIN }
 
 when@test:
     security:
