--- a/portfolio-frontend-public/package.json
+++ b/portfolio-frontend-public/package.json
@@ -24,7 +24,11 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "jest": "^27.5.1"
+    "autoprefixer": "^10.4.22",
+    "jest": "^27.5.1",
+    "postcss": "^8.5.6",
+    "sass": "^1.94.2",
+    "tailwindcss": "^3.4.18"
   },
   "eslintConfig": {
     "extends": [
