debug admin/ dashboard fini / hero home / competences / projects

--- a/portfolio-backend/config/packages/monolog.yaml
+++ b/portfolio-backend/config/packages/monolog.yaml
@@ -14,7 +14,11 @@ when@dev:
                 type: console
                 process_psr_3_messages: false
                 channels: ["!event", "!doctrine", "!console"]
-
+            jwt:
+                type: stream
+                path: "%kernel.logs_dir%/jwt.log"
+                level: debug
+                channels: ["security"]
 when@test:
     monolog:
         handlers:
