--- a/portfolio-backend/config/packages/nelmio_cors.yaml
+++ b/portfolio-backend/config/packages/nelmio_cors.yaml
@@ -1,15 +1,15 @@
 nelmio_cors:
-    defaults:
-        origin_regex: true 
-        allow_credentials: true
-        allow_headers: ['Content-Type', 'Authorization']
-        allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']
-    paths:
-        '^/api/':
-            allow_origin: 
-                - 'http://localhost:3000'
-                - 'http://localhost:3001'
-            allow_credentials: true
-            allow_headers: ['Content-Type', 'Authorization']
-            allow_methods: ['GET','POST','PUT','PATCH','DELETE','OPTIONS']
+  defaults:
+    allow_credentials: true
+    allow_headers: ['Content-Type', 'Authorization']
+    allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']
+    max_age: 3600
 
+  paths:
+    '^/api/':
+      allow_origin:
+        - 'http://localhost:3000'
+        - 'http://localhost:3001'
+      allow_credentials: true
+      allow_headers: ['Content-Type', 'Authorization']
+      allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']
